--- a/2. Data Processing.ipynb
+++ b/2. Data Processing.ipynb
@@ -167,7 +167,7 @@
    "source": [
     "Here is an example original image and the dataset that was created\n",
     "\n",
-    "![title](Examples/Example1.png)\n",
+    "![image.png](Examples/Example1.png)\n",
     "\n",
     "Notice that the background is completely white"
    ]
