--- a/2. Data Processing.ipynb
+++ b/2. Data Processing.ipynb
@@ -165,11 +165,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is an example original image and the dataset that was created\n",
+    "Here is an example original image and the dataset that was created.  Notice that the background is completely white\n",
     "\n",
-    "![image.png](Examples/Example1.png)\n",
-    "\n",
-    "Notice that the background is completely white"
+    "<img align=\"center\" src=\"Examples/Example1.png\" width=\"200\" >\n",
+    "\n"
    ]
   },
   {
