--- a/2. Data Processing.ipynb
+++ b/2. Data Processing.ipynb
@@ -167,7 +167,7 @@
    "source": [
     "Here is an example original image and the dataset that was created.  Notice that the background is completely white\n",
     "\n",
-    "<img align=\"center\" src=\"Examples/Example1.png\" width=\"200\" >\n",
+    "<img align=\"center\" src=\"Examples/Example1.png\" width=\"200\" />\n",
     "\n"
    ]
   },
