--- a/2. Data Processing.ipynb
+++ b/2. Data Processing.ipynb
@@ -167,7 +167,7 @@
    "source": [
     "Here is an example original image and the dataset that was created.  Notice that the background is completely white\n",
     "\n",
-    "<img align=\"center\" src=\"Examples\\Example1.png\" width=\"200\" />\n",
+    "<img align=\"center\" src=\"files/Examples/Example1.png\" width=\"200\" />\n",
     "\n"
    ]
   },
@@ -255,6 +255,24 @@
    "metadata": {},
    "source": [
     "This method of adding the original image to a new background highlights the flaws in the ground truth mattes.  Overall, however, they are a fairly good match to the image.  Right now, I'm not sure which is better, only using the original images or allowing this flaws to exist.  It seems to me that it will be easier for the neural network to pick up on the boundaries if there are white spaces.  It may develop a reliance on the white borders.  However, the other method will confuse the neural network as it will struggle to correctly determine the boundaries (the ground truth is not perfect).  Therefore, I will go through with this method as it allows a much broader range of acceptable backgrounds and will see how it works out."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P:\\Users\\Owner\\Data Projects\\ImageSeg\n"
+     ]
+    }
+   ],
+   "source": [
+    "from os import path\n",
+    "print(path.abspath(path.curdir))"
    ]
   }
  ],
