--- a/2. Data Processing.ipynb
+++ b/2. Data Processing.ipynb
@@ -167,8 +167,15 @@
    "source": [
     "Here is an example original image and the dataset that was created.  Notice that the background is completely white\n",
     "\n",
-    "<img align=\"center\" src=\"files/Examples/Example1.png\" width=\"200\" />\n",
+    "<img align=\"center\" src=\"Examples/Example1.png\" width=\"200\" />\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Original Image](Examples/Example1.png)"
    ]
   },
   {
