--- a/2. Data Processing.ipynb
+++ b/2. Data Processing.ipynb
@@ -166,7 +166,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -174,6 +173,13 @@
     "\n",
     "<img align=\"center\" src=\"Examples/Example1.png\" width=\"200\" />\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Original Image](Examples/Example1.png)"
    ]
   },
   {
