--- a/2. Data Processing.ipynb
+++ b/2. Data Processing.ipynb
@@ -171,15 +171,14 @@
    "source": [
     "Here is an example original image and the dataset that was created.  Notice that the background is completely white\n",
     "\n",
-    "<img align=\"center\" src=\"Examples/Example1.png\" width=\"200\" />\n",
-    "\n"
+    "<img align=\"center\" src=\"Examples/Example1.png\" width=\"200\" />"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Original Image](Examples/Example1.png)"
+    "![Original Image](/Examples/Example1.png)"
    ]
   },
   {
