--- a/2. Data Processing.ipynb
+++ b/2. Data Processing.ipynb
@@ -178,7 +178,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Original Image](/Examples/Example1.png)"
+    "![Original Image](./Examples/Example1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://drive.google.com/file/d/1rdnjE9X12I_NyjfL_CEbuvtr9ikh-7gb/view?usp=sharing"
    ]
   },
   {
