Update 2. Data Processing.ipynb

--- a/2. Data Processing.ipynb
+++ b/2. Data Processing.ipynb
@@ -171,14 +171,14 @@
    "source": [
     "Here is an example original image and the dataset that was created.  Notice that the background is completely white\n",
     "\n",
-    "<img align=\"center\" src=\"Examples/Example1.png\" width=\"200\" />"
+    "<img align=\"center\" src=\"/Example1.png\" width=\"200\" />"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Original Image](./Example1.png)"
+    "![Original Image](/Example1.png)"
    ]
   },
   {
