--- a/3. TNet.ipynb
+++ b/3. TNet.ipynb
@@ -336,7 +336,7 @@
     "            logits = F.softmax(logits,dim=1)\n",
     "            \n",
     "        else:\n",
-    "            logits = F.sigmoid(logits)\n",
+    "            logits = torch.sigmoid(logits)\n",
     "\n",
     "        return logits"
    ]
