--- a/1. Introduction.ipynb
+++ b/1. Introduction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "INTRODUCTION\n",
+    "## INTRODUCTION\n",
     "\n",
     "Convolutional Neural Networks (CNN) have become standard for any computer vision task due to their ability to extract features from spatial information within images.  A process known as covolution uses kernels/filters to boil down images to much more meaningful pieces of information known as feature maps.  Max pooling usually follows convolutions in order to downsize the feature maps into a something much more computationably reasonable.  This is allowed as most vision tasks can afford some information loss and the number of trainable parameters is drastically reduced.\n",
     "\n",
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DATASET\n",
+    "## DATASET\n",
     "\n",
     "The first thing I noticed is that there are distortions in a non-negligle amount of the images in this dataset.  The top of the image is stretched out upwards, distorting the size of the head\n",
     "\n",
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DATASET EXPLORATION\n",
+    "## DATASET EXPLORATION\n",
     "\n",
     "As discussed in the introduction, the dataset is paramount to any deep learning project.  Creating pixel perfect alpha mattes (segmented image into 1s (foreground) and 0s (background) of original image) is time consuming, especially on a big scale.  Therefore, it is not feasible for me to construct my own dataset from scratch.  Initially, I wanted to solve a potential issue with the celebrity dataset.  There is only one person in each photo, which is a glaring issue for any practical use going forwards.  My plan was to train on the Deep Image Matting dataset.  It contains pictures of people as well as mattes containing numbers 0-18, where 0 is the background and the other numbers refer to things like 'left shoe' and 'face'."
    ]
@@ -326,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ARCHITECTURE\n",
+    "## ARCHITECTURE\n",
     "\n",
     "The standard architecture that has been developed in order to handle image segmentation is known as UNet.  This is a variation of the standard CNN autoencoder in that each convolved layer is both downsampled/convolved as well as passed forward to the corresponding decoding layer.\n",
     "\n",
@@ -370,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "REFERENCES\n",
+    "## REFERENCES\n",
     "1. Automatic Portrait Segmentation for Image Stylization (Xiaoyong Shen, Aaron Hertzmann, Jiaya Jia1, Sylvain Paris, Brian Price, Eli Shechtman,and Ian Sachs)\n",
     "2. Boundary-Sensitive Network for Portrait Segmentation (Xianzhi Du, Xiaolong Wang, Dawei Li, Jingwen Zhu, Serafettin Tasci, Cameron Upright, Stephen Walsh, Larry Davis)\n",
     "3. Deep Image Matting (Ning Xu, Brian Price, Scott Cohen, and Thomas Huang)\n",
