--- a/2. Data Processing.ipynb
+++ b/2. Data Processing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DATA PROCESSING\n",
+    "## DATA PROCESSING\n",
     "\n",
     "I'm going to try to use image augmentation in order to generate images from the limited 1500 dataset.  Most of the images in the dataset have plain backgrounds, so I'm going to try to introduce more typical and varied backgrounds as well as adjust the original image."
    ]
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " BACKGROUNDS\n",
+    " ## BACKGROUNDS\n",
     " \n",
     " I downloaded the MIT Places dataset (http://places.csail.mit.edu/user/index.php) as it has an insanely high number of images, much higher than I'll need for my current dataset.  There are quite a few categories, each with 5000 images.  However, some of these are not well suited (some categories have people up close and others are of images that won't work ie pictures of planes up close or aerial shots of cities).  I decided to pull the following number of images from the categories:\n",
     "\n",
