--- a/3. TNet.ipynb
+++ b/3. TNet.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TNET\n",
+    "## TNET\n",
     "\n",
     "This is where my lack of experience really becomes apparent.  I've worked with standard CNNs before, but nothing like a UNet.  I copied the UNet from https://medium.com/srm-mic/a-gentle-introduction-to-u-net-fc4afd12a893.  This version uses VGG16 layers which is standard for these kinds of problems.  I was also able to read and understand the code behind the UNet, so it made a lot more sense than other places I found.  The main benefit I gathered from reading how other people handled the architecture was the use of helper functions, which significantly clean up the code.  I definitely would have attempted to do this from scratch had I not read through other people's attempts."
    ]
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DATASET\n",
+    "## DATASET\n",
     "\n",
     "The biggest mistake I've made before when it comes to handling image datasets in pytorch is that I turned the images into numpy arrays and stuffed them into a dataframe.  As it turns out, the dataset can be as simple as the name of the file and you can turn that into a PIL image whenever the neural network needs to process it.  The best part of the dataloader is that it automatically shuffles the images and keeps them in batches for you.\n",
     "\n",
@@ -193,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "UNET\n",
+    "## UNET\n",
     "\n",
     "There are a few changes that I had to make to the UNet I had found.  The first was easy, the writer had forgotten to concatenate the old convolution with the current one in the Up class.  This was probably just a typo that was corrected in the final product.  Next, I ran into an issue with memory.  I have a GTX 1050 Ti GPU, but it was not capable of handling the entirety of the network.  Even when pushing the batch size down to 1, I still ran out of memory.\n",
     "\n",
@@ -345,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LOSS FUNCTIONS\n",
+    "## LOSS FUNCTIONS\n",
     "\n",
     "Even though applying a softmax significantly improved the results, I'm glad that I looked into loss functions.  I was originally using the standard MSE loss that is given by pytorch.  This is a pixel wide square of the difference between predicted and ground truth, for each channel.\n",
     "\n",
@@ -412,7 +412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TRAINING\n",
+    "## TRAINING\n",
     "\n",
     "I was initially going to train both TNet and MNet together but due to memory limitations I am forced to train them separately.  Since I can only handle a batch size of 1, the loss is not really reliable as it stochastically jumps around.  I could average the loss but I did not want to test the capabilities of the memory.  Finally, because each person's face is repeated 10-20 times, I was super worried about overfitting.  However, I trained each model for 4 epochs, saving after each one, and compared the results on test images.  While there was some variability, the networks seemed to improve and the 4th version seemed to be the best.  The biggest gap was between epoch 1 and 2, with the last 3 not having significant impact."
    ]
@@ -634,7 +634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RESULTS\n",
+    "## RESULTS\n",
     "\n",
     "So, the results are not as good as I would have liked.  It's hard to say how well a network can perform given that I've adding complicated backgrounds into each photo.  The network does a good job most of the time (~80%).  I think that this network is perfectly fine with 'easy' backgrounds and will have little trouble with most of the celebrity dataset.  However, I still look forward to testing this on the unique test cases I highlighted in the first jupyter notebook (multiple people, hats, distortions in the images).\n",
     "\n",
