--- a/4. MNet.ipynb
+++ b/4. MNet.ipynb
@@ -340,7 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MNET RESULTS\n",
+    "## MNET RESULTS\n",
     "\n",
     "So, as is expected, with clean trimaps we get clean alpha mattes.  When the trimap is messy, the predicted alpha matte is a slightly cleaner version of the mess (see the seventh row).  When the alpha mate has its occasional hole, it fills it in by the time the network gets to the alpha matte (see the third row).  The network also does a good job at recovering detail from areas the trimap smoothes over (see the bottom left of the hair in the last row).\n",
     "\n",
@@ -601,7 +601,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "FUSION MODULE\n",
+    "## FUSION MODULE\n",
     "\n",
     "From my perspective, it does not look like the fusion module is particularly helpful.  The largest thing gating my performance are the trimaps.  Initially, I thought I could help enhance the predictions including a third network that took predicted trimap and alpha matte and tried to predict the true alpha matte again.  Based on the errors with the messy trimaps and they way that the MNet handled them, I no longer thing the solution would be to stack yet another trimap on top of the process."
    ]
