--- a/2. Data Processing.ipynb
+++ b/2. Data Processing.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## DATA PROCESSING\n",
     "\n",
-    "I'm going to try to use image augmentation in order to generate images from the limited 1500 dataset.  Most of the images in the dataset have plain backgrounds, so I'm going to try to introduce more typical and varied backgrounds as well as adjust the original image."
+    "I'm going to try to use image augmentation in order to generate images from the limited 1500 dataset.  Most of the images in the dataset have plain backgrounds, so I'm going to try to introduce more typical and varied backgrounds. I'll also be altering the images in order to augment the dataset further and help improve the robustness of the model."
    ]
   },
   {
