--- a/3. TNet.ipynb
+++ b/3. TNet.ipynb
@@ -414,7 +414,7 @@
    "source": [
     "## TRAINING\n",
     "\n",
-    "I was initially going to train both TNet and MNet together but due to memory limitations I am forced to train them separately.  Since I can only handle a batch size of 1, the loss is not really reliable as it stochastically jumps around.  I could average the loss but I did not want to test the capabilities of the memory.  Finally, because each person's face is repeated 10-20 times, I was super worried about overfitting.  However, I trained each model for 4 epochs, saving after each one, and compared the results on test images.  While there was some variability, the networks seemed to improve and the 4th version seemed to be the best.  The biggest gap was between epoch 1 and 2, with the last 3 not having significant impact."
+    "I was initially going to train both TNet and MNet together but due to memory limitations I am forced to train them separately.  Even though the batch size is 1 and the loss will stocastically bounce around, I can average the loss over the entire epoch in order to get a better represenation of how the loss is decreasing.  Finally, because each person's face is repeated 10-20 times, I was super worried about overfitting.  However, I trained each model for 4 epochs, saving after each one, and compared the results on test images.  While there was some variability, the networks seemed to improve and the 4th version seemed to be the best.  The biggest gap was between epoch 1 and 2, with the last 3 not having significant impact."
    ]
   },
   {
@@ -644,7 +644,7 @@
     "![Original Image](https://github.com/alexikerd/PortraitSegmentation/blob/master/Examples/LossComparison.PNG?raw=true)\n",
     "![Original Image](https://github.com/alexikerd/PortraitSegmentation/blob/master/Examples/LossComparison2.PNG?raw=true)\n",
     "\n",
-    "This are two examples where the MSE loss actually performs better than the other two.  This is the best example I could come up with to illustrate the point that compositional loss seems to excel where dice loss is specialized but does not fall into the same traps.  It seems to find the happy medium and will be the loss function I use going forward with the MNet as well.\n",
+    "This are two examples where the MSE loss actually performs better than the other two.  These are the best examples I could come up with to illustrate the point that compositional loss seems to excel where dice loss is specialized but does not fall into the same traps.  It seems to find the happy medium and will be the loss function I use going forward with the MNet as well.\n",
     "\n",
     "On another note, in the first example above, it looks like there is a misclassification in the true trimap that gets reflected similarly in my neural network.  I've gone through the training set by hand and have confirmed that this woman is not also in the training set (I had already made sure there were no duplicates but I wanted to be extra sure).  I'm honestly pretty shocked that the TNet made a similar mistake."
    ]
@@ -701,6 +701,13 @@
     "    \n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a very good example of how the training process improves over epochs, even on test data.  The best improvement is from epoch 1 to epoch 2, but there are steady improvements throughout the training process."
    ]
   },
   {
@@ -777,6 +784,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first and eighth row really highlight the flaws with MSE loss.  It is way to sensitive to certain backgrounds and even captures elements of the person's face.  While DICE loss is better than COMP loss in the first row, it is not by much.  COMP is much better than DICE when looking at the eighth row.  Overall, the difference between the two is not big, but COMP edged out DICE by a slight margin.\n",
+    "\n",
+    "The last thing I want to point out that I found interesting was in the eighth row.  All three models found the drawstring on the person to be the \"true\" end of her shoulder.  This is an issue that I don't see a clear way around because finding the difference between clear clothes boundaries and an outcropping from the environment is really hard."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -828,6 +844,13 @@
     "    \n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training the model for 10 epochs does little to improve performance, so I'm happy at ending the training at 4."
    ]
   }
  ],
